# block_list

./: LICENSE  Makefile  README.md  bad_actors.jq  bad_actors.json  bad_actors__simplified.json  cidr_to_str.py  cloud_ips.json  cloud_ips__and__bad_actors__simplified.json  cloud_ips__simplified.json  cloud_ips_bad_actors_simplified.json  cloud_ips_simplified.json  data.json  pyproject.toml  requirements.txt  simplify_and_merge_ip_lists.py
.github/workflows/: ci.yml  pr.yml
__tests__/unit/: test__merge.py
ip_calc/: __init__.py  __main__.py
tests/: __init__.py
tests/unit/: test__merge.py
