[tool.poetry]
name = "ip_calc"
version = "0.1.0"
description = "IP simplifier module"
authors = ["mshafer1"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.66.0"
click = "^8.1.6"
self-balancing-binary-search-tree = "^0.1.4"

[tool.poetry.dev-dependencies]
ni-python-styleguide = "^0.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
